--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "type": "module",
     "scripts": {
         "test": "vitest --run",
-        "build": "tsc"
+        "build": "tsc",
+        "format": "prettier --write .",
+        "lint": "eslint . --ext .ts"
     },
     "keywords": [],
     "author": "",
