--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@adoublef/server-sent-events",
+    "name": "express-ts",
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
@@ -7,8 +7,10 @@
     "scripts": {
         "test": "vitest --run",
         "build": "tsc",
+        "dev": "tsx index.ts",
         "format": "prettier --write .",
-        "lint": "eslint . --ext .ts"
+        "lint": "eslint . --ext .ts",
+        "docker:build": "docker build -t express-ts ."
     },
     "keywords": [],
     "author": "",
