--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
         "dev": "tsx index.ts",
         "format": "prettier --write .",
         "lint": "eslint . --ext .ts",
-        "docker:build": "docker build -t express-ts ."
+        "docker:build": "docker build -t express-ts .",
+        "docker:run": "docker run -d -p 8080:8080 express-ts"
     },
     "keywords": [],
     "author": "",
